--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,6 +16,8 @@ jobs:
           java-version: 11
           java-package: jdk
           architecture: x64
+      - name: Build with Maven
+        run: mvn -B package
       - name: Publish to GitHub Packages
         run: mvn -B deploy
         env:
