--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,9 +16,10 @@ jobs:
           java-version: 11
           java-package: jdk
           architecture: x64
-      - name: Build with Maven
-        run: mvn -B package
       - name: Publish to GitHub Packages
-        run: mvn -B deploy
+#        run: mvn -B deploy
+        run: |
+        mvn -B versions:set -DnewVersion=$GITHUB_SHA -DgenerateBackupPoms=false
+        mvn -B deploy
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
